# transcribeit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  compose.yaml
.github/workflows/: linters.yaml
backend/: Dockerfile  pyproject.toml
backend/src/transcribeit/: server.py
backend/src/transcribeit/config/: __init__.py
backend/src/transcribeit/models/: transcription.py
backend/src/transcribeit/routers/: transcription.py
backend/src/transcribeit/services/download/: youtube.py
frontend/: .env.example  .pre-commit-config.yaml
frontend/src/app/: page.tsx
server/: .env.sample  Dockerfile  pyproject.toml
server/src/transcribeit/: server.py
server/src/transcribeit/config/: __init__.py  environment.py
server/src/transcribeit/models/: transcription.py
server/src/transcribeit/services/: description.py  diarization.py
web/: package.json
web/src/app/: layout.tsx  page.tsx
web/src/components/app/: Transcription.tsx
web/src/components/app/commons/: Header.tsx
web/src/lib/: schema.ts  types.ts  utils.ts
