[tool.poetry]
name = "transcribeit"
version = "0.1.0"
description = ""
authors = ["Keerthana <grittypuffy@riseup.net>"]

packages = [
    { include = "transcribeit", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.121.2,<0.122.0"
pydantic-settings = ">=2.12,<3.0.0"
uvicorn = ">=0.38,<0.39.0"
pyjwt = ">=2.10,<3.0.0"
python-dotenv = ">=1.0,<2.0.0"
ffmpeg-python = ">=0.2,<0.3.0"
python-multipart = "^0.0.5"

# FIXED: use real existing version
aiofiles = "^23.2.1"

bcrypt = ">=5.0,<6.0.0"
yt-dlp = "*"
faster-whisper = ">=1.2,<2.0.0"

# FIXED: black has no version 25.x
black = "^23.12.1"

pre-commit = ">=4.5.0,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

